style.css
@import url(http://fonts.googleapis.com/css?family=Inconsolata|Lato:300);

* {margin:0; padding:0;}
html,body {width:100%; height:100%;}
body {
	background-color:#183442;
	color:#EFFFDE;
}
#gameboy-column {
	width:320px; height:100%;
	background-color:#EFFFDE;
	color:#183442;
	float:left;
}
#gameboy-column canvas {
	width:320px; height:288px;
	image-rendering: optimizeSpeed;
	image-rendering: crisp-edges;
	image-rendering: -moz-crisp-edges;
	image-rendering: -o-crisp-edges;
	image-rendering: -webkit-optimize-contrast;
	-ms-interpolation-mode: nearest-neighbor;
}
#gameboy-column h1 {
	font-family:Lato;
	font-weight:300;
	font-size:40px;
	margin:0.2em;
	text-align:center;
}

#console {
	width:calc(100% - 320px); height:100%;
	font-family:Inconsolata; box-sizing:border-box;
	float:right;
}
#history {
	width:100%;
	max-height:calc(100% - 2em);
	overflow:scroll;
	padding:1em;
	box-sizing:border-box;
}
#prompt {
	background-color:#EFFFDE; line-height:2em; width:1em; float:left;
	color:#183442; text-align:center;
}
#command {
	height:2em; box-sizing:border-box; width:calc(100% - 6em);
	padding:0.5em; border:none;
	font-family:Inconsolata; font-size:100%;
	background-color:#EFFFDE;
	color:#183442;
}
#execute {
	float:right; width:5em;
	text-align:center; line-height:2em;
	cursor:default;
}

